Fix link copy spacing

--- a/css/style.css
+++ b/css/style.css
@@ -817,7 +817,7 @@ a {
 
   .copy-icon-text {
     top: 13px;
-    left: 9px;
+    left: 11px;
   }
 
   .link-copied-text {
